<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    tools:context=".REGISTRATION_ACTIVITY"
    android:orientation="vertical"
    android:focusable="false"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="100dp"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/ic_launcher" />

            <EditText
                android:id="@+id/registration_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edittext_background"
                android:drawableLeft="@drawable/ic_user"
                android:drawablePadding="5dp"
                android:drawableTint="@color/text_hint"
                android:elevation="8dp"
                android:hint="@string/registration_username_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="10dp"
                android:paddingLeft="5dp"
                android:textColor="@color/text_color"
                android:textColorHint="@color/text_hint" />

            <EditText
                android:id="@+id/registration_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edittext_background"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="5dp"
                android:drawableTint="@color/text_hint"
                android:elevation="8dp"
                android:hint="@string/registration_email_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="10dp"
                android:paddingLeft="5dp"
                android:textColor="@color/text_color"
                android:textColorHint="@color/text_hint" />

            <EditText
                android:id="@+id/registration_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edittext_background"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="5dp"
                android:drawableTint="@color/text_hint"
                android:elevation="8dp"
                android:hint="@string/registration_password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="10dp"
                android:paddingLeft="5dp"
                android:textColor="@color/text_color"
                android:textColorHint="@color/text_hint" />

            <EditText
                android:id="@+id/registration_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edittext_background"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="5dp"
                android:drawableTint="@color/text_hint"
                android:elevation="8dp"
                android:hint="@string/registration_confirm_password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="10dp"
                android:paddingLeft="5dp"
                android:textColor="@color/text_color"
                android:textColorHint="@color/text_hint" />

            <Button
                android:id="@+id/registration_complete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/blue_gradient"
                android:text="@string/registration_button_string"
                android:textAlignment="center"
                android:textColor="@color/app_white2"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:text="@string/registration_login_button_string"
                android:textAlignment="center" />

            <Button
                android:id="@+id/registration_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rectangular_border"
                android:text="@string/login_log_string"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>