<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:focusable="false"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="100dp"
                android:src="@drawable/ic_plus" />

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edittext_background"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="5dp"
                android:drawableTint="@color/text_hint"
                android:elevation="8dp"
                android:hint="@string/login_email_string"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="10dp"
                android:paddingLeft="5dp"
                android:textColor="@color/text_color"
                android:textColorHint="@color/text_hint" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/edittext_background"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="5dp"
                android:drawableTint="@color/text_hint"
                android:elevation="8dp"
                android:hint="@string/login_password_string"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="10dp"
                android:paddingLeft="5dp"
                android:textColor="@color/text_color"
                android:textColorHint="@color/text_hint" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/login_remember_me"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/login_remember_string"
                    android:textColor="@color/text_color" />

                <TextView
                    android:id="@+id/login_forgot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="2dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/login_forgot_string"
                    android:textColor="@color/text_color" />
            </LinearLayout>

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/blue_gradient"
                android:text="@string/login_log_string"
                android:textAlignment="center"
                android:textColor="@color/app_white2"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:text="@string/login_registration_string"
                android:textAlignment="center" />

            <Button
                android:id="@+id/login_registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rectangular_border"
                android:text="@string/login_reg_string"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>